// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contributors Table renders component correctly with revenue share 1`] = `
<div
  className="table-scroll table-box contributors"
>
  <table
    className="table-scroll"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <tbody>
      <tr
        className="header-row"
      >
        <th>
          Contributors
        </th>
        <th>
          Total Tokens Awarded
        </th>
        <th>
          Unpaid Revenue Shares
        </th>
        <th>
          Unpaid Revenue Share Balance
        </th>
        <th>
          Lifetime Paid
        </th>
      </tr>
      <tr
        className="award-row"
      >
        <td
          className="contributor"
        >
          <img
            className="icon avatar-img"
            src="/test2.png"
          />
          <div
            className="margin-small margin-collapse inline-block"
          >
            Betsy
            <table
              className="table-scroll table-box overlay"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <tbody>
                <tr>
                  <th
                    style={
                      Object {
                        "paddingBottom": "20px",
                      }
                    }
                  >
                    Contribution Summary
                  </th>
                </tr>
                <tr>
                  <td>
                    Bugfix
                  </td>
                  <td>
                    20,000
                  </td>
                </tr>
                <tr>
                  <td>
                    Contribution
                  </td>
                  <td>
                    5,333
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
        <td
          className="awards-earned financial"
        >
          <span
            className="margin-small"
          >
            49,877
          </span>
        </td>
        <td
          className="award-holdings financial"
        >
          <span
            className="margin-small"
          >
            49,377
          </span>
        </td>
        <td
          className="holdings-value financial"
        >
          <span
            className="margin-small"
          >
            $1,348.68
          </span>
        </td>
        <td
          className="paid hidden financial"
        >
          <span
            className="margin-small"
          >
            $15.08
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Contributors Table renders component correctly without props 1`] = `
<div
  className="table-scroll table-box contributors"
>
  <table
    className="table-scroll"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <tbody>
      <tr
        className="header-row"
      >
        <th>
          Contributors
        </th>
        <th>
          Total Tokens Awarded
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Contributors Table renders component correctly without revenue share 1`] = `
<div
  className="table-scroll table-box contributors"
>
  <table
    className="table-scroll"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <tbody>
      <tr
        className="header-row"
      >
        <th>
          Contributors
        </th>
        <th>
          Total Tokens Awarded
        </th>
      </tr>
      <tr
        className="award-row"
      >
        <td
          className="contributor"
        >
          <img
            className="icon avatar-img"
            src="/test.png"
          />
          <div
            className="margin-small margin-collapse inline-block"
          >
            Joe
            <table
              className="table-scroll table-box overlay"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <tbody>
                <tr>
                  <th
                    style={
                      Object {
                        "paddingBottom": "20px",
                      }
                    }
                  >
                    Contribution Summary
                  </th>
                </tr>
                <tr>
                  <td>
                    Idea leading to patent
                  </td>
                  <td>
                    7,000
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
        <td
          className="awards-earned financial"
        >
          <span
            className="margin-small"
          />
        </td>
      </tr>
      <tr
        className="award-row"
      >
        <td
          className="contributor"
        >
          <img
            className="icon avatar-img"
            src="/test2.png"
          />
          <div
            className="margin-small margin-collapse inline-block"
          >
            Betsy
            <table
              className="table-scroll table-box overlay"
              style={
                Object {
                  "display": "none",
                }
              }
            >
              <tbody>
                <tr>
                  <th
                    style={
                      Object {
                        "paddingBottom": "20px",
                      }
                    }
                  >
                    Contribution Summary
                  </th>
                </tr>
                <tr>
                  <td>
                    Bugfix
                  </td>
                  <td>
                    20,000
                  </td>
                </tr>
                <tr>
                  <td>
                    Contribution
                  </td>
                  <td>
                    5,333
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </td>
        <td
          className="awards-earned financial"
        >
          <span
            className="margin-small"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
